--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(ac)
 export(allchar)
 export(cleannames)
 export(cnames)
+export(exsubtxt)
+export(extxt)
 export(firstnumpos)
 export(getnames)
 export(matchwords)
