--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cleannames)
 export(cnames)
 export(exsubtxt)
 export(extxt)
+export(exyear)
 export(firstnumpos)
 export(getnames)
 export(matchwords)
@@ -23,3 +24,4 @@ export(rt)
 export(rtn)
 export(ts)
 export(tstamp)
+export(yearExtract)
