--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cleannames)
 export(cnames)
 export(exsubtxt)
 export(extxt)
+export(extxt3)
 export(exyear)
 export(firstnumpos)
 export(getnames)
