--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(matchwords)
 export(mcw)
 export(ncw)
 export(numwords)
+export(nwords)
 export(parseaddress)
 export(parseaddressvec)
 export(rn)
