--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(allchar)
 export(cleannames)
 export(cnames)
 export(convitime)
+export(convitime2)
 export(exsubtxt)
 export(extxt)
 export(extxt3)
