recol and redoenc
adding recol and redoenc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(extxt)
 export(extxt3)
 export(exyear)
 export(firstnumpos)
+export(getNCAATeam)
+export(getTeam)
 export(getnames)
 export(matchwords)
 export(mcw)
@@ -19,6 +21,8 @@ export(numwords)
 export(nwords)
 export(parseaddress)
 export(parseaddressvec)
+export(recol)
+export(redoenc)
 export(rn)
 export(rp)
 export(rpn)
@@ -29,5 +33,3 @@ export(rtn)
 export(ts)
 export(tstamp)
 export(yearExtract)
-export(getTeam)
-export(getNCAATeam)
