--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(ac)
 export(allchar)
+export(ceclickopen)
 export(cleannames)
+export(clickall)
 export(cnames)
 export(convitime)
 export(convitime2)
+export(downsame)
 export(exsubtxt)
 export(extxt)
 export(extxt3)
@@ -17,6 +20,7 @@ export(getnames)
 export(matchwords)
 export(mcw)
 export(ncw)
+export(numcomwords)
 export(numwords)
 export(nwords)
 export(parseaddress)
@@ -32,4 +36,5 @@ export(rt)
 export(rtn)
 export(ts)
 export(tstamp)
+export(wetest)
 export(yearExtract)
