--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(clickall)
 export(cnames)
 export(convitime)
 export(convitime2)
+export(dlpubgoog)
 export(downsame)
 export(exsubtxt)
 export(extxt)
