--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(firstnumpos)
 export(getNCAATeam)
 export(getTeam)
 export(getnames)
+export(localtstxt)
 export(matchwords)
 export(mcw)
 export(ncw)
